// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button simple text 1`] = `
<button
  className="Button false"
  data-jsx={1829427671}
  onClick={[Function]}
>
  Hello Button
</button>
`;

exports[`Storyshots Button urgent text prefix 1`] = `
<button
  className="Button urgent"
  data-jsx={1829427671}
  onClick={[Function]}
>
  !Cancel
</button>
`;

exports[`Storyshots Button urgent text sufix 1`] = `
<button
  className="Button urgent"
  data-jsx={1829427671}
  onClick={[Function]}
>
  Cancel!
</button>
`;

exports[`Storyshots Button with some emoji 1`] = `
<button
  className="Button false"
  data-jsx={1829427671}
  onClick={[Function]}
>
  😀 😎 👍 💯
</button>
`;
